--- a/vista/css/styles.css
+++ b/vista/css/styles.css
@@ -40,6 +40,11 @@ body .container {
   position: relative;
   -webkit-overflow-scrolling: touch;
 }
+
+.mdl-card{
+	min-height: 0px !important;
+}
+
 .container .mdl-card {
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -60,8 +65,6 @@ body .container {
 }
 .container .mdl-card__media {
   box-sizing: border-box;
-  background-size: cover;
-  padding: 24px;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -170,9 +173,6 @@ body .container {
 }
 .container-local .custom-header {
   background-color: transparent;
-}
-.container-local .grid > .mdl-card .mdl-card__media {
-  height: 280px;
 }
 .container-local .containerComents {
   background-color: #EEE;
@@ -293,9 +293,6 @@ body .container {
 .container .mensaje .mdl-card__title {
   background-color: #263238;
 }
-.mensaje{
-	/* border-radius:7px; */	
-}
 
 .msgHeader{
 	  background-color: #263238;
@@ -329,19 +326,15 @@ body .container {
   align-items: center;
   box-sizing: border-box;
   
-	/* background-image: url('../images/fondo.jpg'); */
 	background-color: #595959;
     color:white;
     box-shadow: 0 0 5px #000;
 }
 
 .tops{
-	background-image: url('../images/tops.jpg');/* 
-	-webkit-filter: grayscale(65%); Chrome, Safari, Opera
-    filter: grayscale(65%); */
+	background-image: url('../images/tops.jpg');
     filter:hue-rotate(90deg);
     -webkit-filter:hue-rotate(90deg);
-	/* border-radius:10px; */
 	margin:10px auto;
 	}
 .mdl-list__item--two-line{
@@ -364,8 +357,20 @@ body .container {
 	margin:10px;
 }
 
+#mapa footer{
+	margin-top: 0px;
+}
+
+#fotoLocal{
+	width:100%;
+	height:300px;
+	position:relative;
+	-webkit-filter: grayscale(0.9);
+    filter: grayscale(0.9); 
+}
 #tituloLocal{
-	 text-shadow: 1px 1px #DC483A, -1px -1px 0 #DC483A, 1px -1px 0 #DC483A, -1px 1px 0 #DC483A;
-	
-	
+	position:absolute;
+	top: 250px; 
+    left: 20px; 
+	text-shadow: 1px 1px #DC483A, -1px -1px 0 #DC483A, 1px -1px 0 #DC483A, -1px 1px 0 #DC483A;
 }
