--- a/vista/css/set2.css
+++ b/vista/css/set2.css
@@ -14,13 +14,15 @@
 	border-radius: 0;
 	background: #f0f0f0;
 	color: #aaa;
-	font-weight: bold;
 	font-family: "Avenir Next", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	-webkit-appearance: none;
+	font-size:18px !important;
+	padding-top:12px !important;
 }
 
 .input__field:focus {
 	outline: none;
+	
 }
 
 .input__label {
@@ -35,6 +37,7 @@
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+	/*color: red !important;     usar para validación*/
 }
 
 .input__label-content {
