Terminado login y registro

--- a/vista/css/styles.css
+++ b/vista/css/styles.css
@@ -53,10 +53,6 @@ body .container {
 	-webkit-overflow-scrolling: touch;
 }
 
-.mdl-card {
-	min-height: 0px !important;
-}
-
 .container .mdl-card {
 	display: -webkit-flex;
 	display: -ms-flexbox;
@@ -151,7 +147,6 @@ body .container {
 .menu {
 	background-color: #424242;
 	min-height: 50px;
-	color: white;
 }
 
 #breadCrumb {
@@ -162,7 +157,12 @@ body .container {
 #botonMenu {
 	margin: 10px;
 }
-
+.menu .mdl-card__supporting-text{
+	width:auto;
+}
+#home .container.mdl-layout .mdl-layout__content {
+	padding-top: 0;
+}
 /*********************************/
 /**************LOCAL**************/
 /*********************************/
@@ -206,9 +206,10 @@ body .container {
 
 .container .mdl-layout__header-row .usuarioMenu {
 	width: auto !important;
-	height: 64px;
+	height: 32px;
 	border-right: 1px solid white;
 }
+
 
 .mdl-layout__header-row .usuarioMenu .autor {
 	color: white;
@@ -597,7 +598,6 @@ body .container {
   list-style-type: none;
 }
 
-/* UTILITIES */
 #home .centroP:after {
   content: "";
   display: table;
@@ -609,8 +609,6 @@ body .container {
 #home .float-left {
   float: left;
 }
-
-/* HERO SECTION */
 #home .topHome {
   height: 100vh;
   width: 100%;
@@ -629,8 +627,6 @@ body .container {
   color: white;
   margin: 0 auto;
 }
-
-/* ABOUT KITTY INTRO */
 #home .centroHome {
   padding: 5em 2em 5em;
 }
@@ -674,8 +670,6 @@ body .container {
   margin: 0.5em;
   border-radius: 50%;
 }
-
-/* FULLWIDTH BACKGROUND SECTION */
 #home .botHome {
   color: white;
   background-color: rgba(156, 39, 176, 0.6);
@@ -709,11 +703,23 @@ body .container {
   .subscribe-button {
     float: right;
  }
-#home .logo{
- 	width:100px !important;
- 	height:100px !important;
- }
+}
 
+/*********************************/
+/************* REGISTRO **********/
+/*********************************/
+#fotoPortada{
+	width: 100%;
+	height: 220px;
+	position: relative;
+}
+#usuarioError, #emailError, #passwordError{
+	color:red;
+}
+#registro li, #login li{
+	display:none;
+	color:black;
+}
 
 /*********************************/
 /************ SCROLLBAR **********/
