--- a/vista/css/styles.css
+++ b/vista/css/styles.css
@@ -86,8 +86,8 @@ body .container {
 	-webkit-align-items: flex-end;
 	-ms-flex-align: end;
 	align-items: flex-end;
+	border-bottom: 1px solid #616161;
 }
-
 .container .mdl-card__media a, .container .mdl-card__title a {
 	color: inherit;
 }
@@ -126,6 +126,9 @@ body .container {
 	display: -ms-flexbox !important;
 	display: flex !important;
 }
+a:-webkit-any-link {
+	text-decoration: none;
+}
 /*********************************/
 /**************FOOTER*************/
 /*********************************/
@@ -140,6 +143,8 @@ body .container {
 	background-color: #595959;
 	color: white;
 	box-shadow: 0 0 5px #000;
+	border-top: 1px solid #ce318d;
+	text-shadow: 2px 2px #E218B0, 0px 0px 0 #E218B0, 0px 0px 0 #E218B0, 0px 0px 0 #E218B0;
 }
 /*********************************/
 /**************MENU***************/
@@ -147,6 +152,9 @@ body .container {
 .menu {
 	background-color: #424242;
 	min-height: 50px;
+	border-bottom: 1px solid #ce318d;
+	text-shadow: 1px 1px #E218B0, 0px 0px 0 #E218B0, 0px 0px 0 #E218B0, 0px 0px 0 #E218B0;
+	
 }
 
 #breadCrumb {
@@ -163,9 +171,48 @@ body .container {
 #home .container.mdl-layout .mdl-layout__content {
 	padding-top: 0;
 }
+@media screen and (max-width: 1024px){
+	.mdl-layout__header {
+    	 	display: initial !important;
+    	 	min-height: auto;
+		}
+		#breadCrumb, .mdl-layout-title, .autor{
+			display:none;	
+		}
+		.mdl-button{
+			padding: 0 6px;
+			min-width: auto; 
+		}
+		.mdl-layout__header-row {
+    		padding: 0 40px 0 0;
+		}
+		.avatarMsg {
+   			width: 50px;
+    		margin-right: 2px;
+		}
+		#home .frases {
+			padding:0px 0px 0px !important;
+		}
+		blockquote {
+			letter-spacing: initial; 
+			font-size:initial;
+		}
+		.galeria.mdl-card {
+		    width: 100% !important; 
+		    height: 256px;
+		}
+}	
+
 /*********************************/
 /**************LOCAL**************/
 /*********************************/
+#local .container .mdl-card__media{
+    border-bottom: 1px solid #ce318d
+}
+#local .centro {
+	border: 1px solid #ce318d
+	
+}
 #fotoLocal {
 	width: 100%;
 	height: 300px;
@@ -229,7 +276,7 @@ body .container {
 	border: 1px solid #ce318d;
 	background-color: #424242;
 	margin: 0 auto;
-	color: white;
+	color: red;
 }
 
 #local .mdl-textfield__input {
@@ -343,6 +390,12 @@ body .container {
 	flex-direction: column;
 }
 
+#local .mdl-list__item--two-line, #local .mdl-list__item--two-line {
+	height: auto;
+}
+#local hr{
+	border-top: 1px solid #ce318d;
+}
 /*********************************/
 /********SELECCION LOCAL**********/
 /*********************************/
@@ -418,6 +471,10 @@ body .container {
 /*********************************/
 /************ MENSAJES ***********/
 /*********************************/
+#mensajes .mensaje{
+	border: 1px solid #ce318d
+	
+}
 #mensajes .mensaje h3, #mensajes .mensaje .btnAviso {
 	margin: 0 auto;
 	font-size: 30px;
@@ -622,6 +679,7 @@ body .container {
   display: flex;
   flex-direction: column;
   margin: auto;
+  border-bottom: 1px solid #ce318d;
 }
 #home .topHomeTexto {
   color: white;
@@ -673,6 +731,8 @@ body .container {
 #home .botHome {
   color: white;
   background-color: rgba(156, 39, 176, 0.6);
+  border-bottom: 1px solid #ce318d;
+  border-top: 1px solid #ce318d;
 }
 #home .botHome p {
   max-width: 640px;
@@ -713,12 +773,58 @@ body .container {
 	height: 220px;
 	position: relative;
 }
-#usuarioError, #emailError, #passwordError{
+#usuarioError, #emailError, #passwordError, #rePasswordError{
 	color:red;
+	display: block;
 }
-#registro li, #login li{
+#registro span li, #login span li{
 	display:none;
 	color:black;
+}
+.errores{
+	text-align: center;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+/*********************************/
+/************ EDITAR PERFIL ******/
+/*********************************/
+.avatarPerfil{
+	width:150px;
+	height:150px;
+	border-radius: 50%;
+    border-color: black;
+    border-width: 1px;
+    border-style: inset;
+    margin:0 auto;
+}
+
+#editar .input--efecto{
+	width:100%;
+	
+}
+#editar .input{
+	max-width:initial;
+}
+#avatar{
+	margin:0 auto;
+	width:auto !important;
+}
+.file{
+	text-align:center;
+}
+.inputs{
+	height:150px;
+}
+#editar .input{
+	margin:0;
+}
+.inputUser{
+	margin:0 auto;
+}
+#editar #fotoPortada{
+	height:170px;
 }
 
 /*********************************/
